  synchronization could fail on startup or connection establishment
  with the master if multiple applications referred to a replica group
  defined in another application that wasn't yet added.

- FreezeScript can now transform classes to structures and structures
  to classes. It also supports the use of compact type IDs for
  classes.


C++ Changes
===========

- Fixed a bug where the communicator destruction could raise an
  Ice::NullHandleException if a custom observer was setup.

- Fixed a bug where the selector wouldn't check for EPOLLERR on
  Linux. This could cause the selector thread to loop indefinetely if
  this condition occured (which is the case with UDP connected
  sockets).

- Added per process string converters for narrow and wide strings,
  setProcessStringConverter and getProcessStringConverter in IceUtil
  namespace can be used to establish and access the process narrow
  string converter, likewise setProcessWstringConverter and 
  getProcessWstringConverter can be used to establish and access the
  process wide string converter.
  
- Added Ice.LogStdErr.Convert property which control whenever or not
  the default StdErr logger convert messages from native narrow encoding
  to the console code page, the default value is 1 meaning by default
  messages are converted to the console code page encoding, the property
  doesn't affect non Windows OS.
  
- Added IceUtil::nativeToWnative and IceUtil::wnativeToNative functions
  which allow to convert between narrow and wide strings, stringToWstring
  and wstringToString have been deprecated.

- Added ice_staticId() to the ProxyHandle template.


C# Changes
==========

- The Ice.Communicator type now implements IDisposable, which allows
  communicator objects to be used as resources in using() statements.

- Added the metadata tag "clr:implements:Base", which adds the
  specified base type to the generated code for a Slice structure,
  class or interface.
